[project]
name = "supervisor-agents"
version = "0.1.0"
description = "Supervisor multi-agent pattern with LangGraph and MCP tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
